noinst_LTLIBRARIES=libcellmlonly.la
include_HEADERS=CellMLBootstrap.hpp
libcellmlonly_la_SOURCES=CellMLImplementation.cpp CellMLBootstrap.cpp CellMLEvents.cpp
AM_CXXFLAGS=-I$(top_srcdir) -I$(top_srcdir)/sources -I$(top_srcdir)/sources/cellml -I $(top_srcdir)/sources/dom -I $(top_srcdir)/sources/dom_direct -I $(top_srcdir)/sources/mathml -I$(top_builddir)/interfaces
