noinst_LTLIBRARIES=libdomonly.la
libdomonly_la_SOURCES=DOMImplementation.cpp DOMBootstrap.cpp DOMWriter.cpp
AM_CXXFLAGS=-I$(top_srcdir) -I$(top_srcdir)/sources -I$(top_srcdir)/sources/cellml -I $(top_srcdir)/sources/dom -I $(top_srcdir)/sources/mathml -I$(top_srcdir)/interfaces $(GDOME_CFLAGS) $(GLIB_CFLAGS)
